[package]
name = "srv-session"
version = "0.2.1"
edition = "2024"
description = "Server-side session management core with Argon2 and KV abstraction"
license = "MIT"
repository = "https://github.com/371tti/srv-session"

[dependencies]
ahash = "0.8.12"
argon2 = "0.5"
getrandom = "0.4"
log = "0.4"
parking_lot = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
